arkts_static_test/03_Types/ets_cases/3.14_Type_bigint/compile-fail/TYP_03_14_017_FAIL_BIGINT_MUL_FLOAT.ets
/**
 * @id TYP_03_14_017_FAIL_BIGINT_MUL_FLOAT
 * @expect compile-fail
 * @section 3.14
 * @design 验证 bigint * float 算术运算非法
 * @note 反向用例：验证该场景应产生编译时错误
 */
let b: bigint = 100n
let f: float = 3.14
let result = b * f
